# api-time-registration.rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  scaffolding.sh  setup.sh
.cargo-husky/hooks/: pre-commit
.claude/: settings.local.json
.github/workflows/: codeQL.yml  docker.yml  onPush.yaml
certs/: ca.crt  ca.key  ca.srl  cert.conf  generate-certs.sh  server.crt  server.csr  server.pk8
crates/time_entries/: Cargo.toml  README.md
crates/time_entries/src/: lib.rs  main.rs
crates/time_entries/src/adapters/: README.md
crates/time_entries/src/adapters/in_memory/: README.md  in_memory_domain_outbox.rs  in_memory_event_store.rs  in_memory_projections.rs
crates/time_entries/src/adapters/inmemory/: inmem_domain_outbox.rs  inmem_event_store.rs
crates/time_entries/src/adapters/mappers/: time_entry_row_to_time_entry_view.rs
crates/time_entries/src/application/: README.md  errors.rs
crates/time_entries/src/application/command_handlers/: README.md  register_handler.rs
crates/time_entries/src/application/projector/: README.md  repository.rs  runner.rs
crates/time_entries/src/application/queries/: README.md  get_time_entry.rs
crates/time_entries/src/application/query_handlers/: README.md  get_time_entry_handler.rs  time_entries_queries.rs
crates/time_entries/src/core/: README.md  ports.rs  time_entry.rs
crates/time_entries/src/core/time_entry/: README.md  event.rs  evolve.rs  state.rs
crates/time_entries/src/core/time_entry/decider/: README.md
crates/time_entries/src/core/time_entry/decider/register/: README.md  command.rs  decide.rs
crates/time_entries/src/core/time_entry/event/: README.md
crates/time_entries/src/core/time_entry/event/v1/: time_entry_registered.rs
crates/time_entries/src/core/time_entry/projector/: README.md  apply.rs  model.rs
crates/time_entries/src/modules/time_entries/adapters/inbound/: graphql.rs
crates/time_entries/src/modules/time_entries/adapters/outbound/: event_store.rs  projections.rs  projections_in_memory.rs
crates/time_entries/src/modules/time_entries/core/: events.rs  projections.rs  state.rs
crates/time_entries/src/modules/time_entries/core/events/: README.md
crates/time_entries/src/modules/time_entries/core/events/v1/: time_entry_registered.rs
crates/time_entries/src/modules/time_entries/use_cases/list_time_entries_by_user/: README.md  handler.rs  projection.rs
crates/time_entries/src/modules/time_entries/use_cases/register_time_entry/: README.md  decide.rs  decision.rs  handler.rs
crates/time_entries/src/shared/infrastructure/event_store/: mod.rs
crates/time_entries/src/shell/: graphql.rs  mod.rs  state.rs
crates/time_entries/src/shell/workers/: README.md  projector_runner.rs
crates/time_entries/src/test_support/fixtures/commands/: register_time_entry.rs
crates/time_entries/src/test_support/fixtures/events/: time_entry_registered_v1.rs
crates/time_entries/src/test_support/fixtures/events/json/: registered_event_v1.json
crates/time_entries/src/tests/e2e/: list_time_entries_by_user_tests.rs
crates/time_entries/src/tests/fixtures/commands/: register_time_entry.rs
crates/time_entries/src/tests/fixtures/events/: domain_event.rs  time_entry_registered_v1.rs
crates/time_entries/tests/: README.md  projector_inmem_tests.rs  register_decide_tests.rs  register_flow_inmem_tests.rs
crates/time_entries/tests/fixtures/commands/: RegisterTimeEntry.rs
crates/time_entries/tests/fixtures/commands/json/: register_time_entry.json
crates/time_entries/tests/fixtures/events/: DomainEvent.rs  TimeEntryRegisteredV1.rs
crates/time_entries/tests/fixtures/events/struct/: TimeEntryRegisteredV1.rs
crates/time_entries_api/: Cargo.toml
crates/time_entries_api/src/: main.rs  schema.rs
docker/mongodb/: docker-compose.yaml
docker/pulsar/: docker-compose.yaml
docs/: FRONTEND_CHANGELOG.md
docs/adr/: 0000-madr-template-for-adr.md  0001-modular-fcis-folder-structure.md  0002-aws-lambda-inbound-wiring.md  0003-intent-and-outbox-pattern.md  0004-technical-event-pattern.md  0005-command-handling-pattern.md  0006-query-handling-pattern.md  0007-incoming-event-handling-pattern.md  0008-intent-relay-pattern.md  0009-event-relay-pattern.md  0010-projector-pattern.md  0011-projection-rebuild-strategy.md  architecture-summary.md
docs/guides/: adding-a-new-module.md  events-vs-intents.md  implementing-a-command-use-case.md  implementing-projections.md  intents-and-outbox.md  serving-a-query.md  state-and-evolve.md
docs/plans/: 2026-02-22-adr-alignment-restructure-design.md  2026-02-22-adr-alignment-restructure.md  2026-02-22-adr-runtime-model-update-design.md  2026-02-23-collapse-api-crate.md  2026-02-23-remove-crates-directory.md  2026-02-24-health-check-design.md  2026-02-24-health-check-endpoint.md  2026-02-24-rest-api-inbound-adapters-design.md  2026-02-24-rest-api-inbound-adapters.md  2026-03-03-tags-design.md  2026-03-15-auth-provider-jwt-integration.md  2026-03-15-iam-bounded-context.md  2026-03-21-tags-design-addendum.md  (+5 more)
src/: lib.rs  main.rs
(+147 files in other folders)
