[package]
name = "time-registration_rs"
version = "0.1.0"
description = "Backend API to register time entries."
edition = "2024"
readme = "README.md"
repository = "https://github.com/jvhellemondt/api-time-registration.rs"

[package.metadata.scripts]
fmt = "cargo fmt --all -- --check"
fmt-fix = "cargo fmt --all"
lint = "cargo clippy --all-targets --all-features"
test = "cargo nextest run --workspace --retries 2"
test-integration = "cargo nextest run --workspace --retries 2 -- --ignored integration"
coverage = "cargo llvm-cov nextest --workspace --fail-under-functions 100 --fail-under-lines 100 --fail-under-regions 100 --show-missing-lines"

[dependencies]
arts-n-crafts = "0.1.2"
dotenvy = "0.15.7"
futures = "0.3.31"
pulsar = "6.4.1"
rstest = "0.26.1"
chrono = "0.4.42"
mongodb = "3.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["sync", "rt"] }
async-trait = "0.1.89"
thiserror = "2.0.16"
strum_macros = "0.27.2"

[dependencies.uuid]
version = "1.18.1"
features = ["v7", "serde"]
